test/error/sema/unknown-type.dsk
func f(x: BadType) -> void
    return
end
